# TeslaInfotainmentSystemQT

./: CMakeLists.txt  Main.qml  README.md  main.cpp
ui/Musicbar/: Musicbar.qml
